Set the fixed height and width to 0 of the lower-left pomodoro-timer container on mobile devices

--- a/imports/ui/pomodoroTimer/pomodoroTimer.scss
+++ b/imports/ui/pomodoroTimer/pomodoroTimer.scss
@@ -72,7 +72,10 @@
   position: absolute;
   bottom: 9rem;
   left: 1rem;
-
+  @media (max-width: 767px) {
+    height: 0;
+    width: 0;
+  }
   @media (max-width: 768px) {
     left: 3vw;
   }
